// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns getAddonHealth 1`] = `
[
  {
    "key": "Degraded",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Degraded",
    "value": 1,
  },
  {
    "key": "Progressing",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Progressing",
    "value": 1,
  },
  {
    "key": "Unknown",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Unknown",
    "value": 3,
  },
  {
    "isPrimary": true,
    "key": "Available",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Available",
    "value": 3,
  },
]
`;

exports[`Correctly returns getAppTypeSummary 1`] = `
{
  "loading": false,
  "mainSection": {
    "description": "total applications",
    "link": "/multicloud/applications",
    "title": "123",
  },
  "statusSection": [
    {
      "count": 4,
      "link": "/multicloud/applications?type=argo",
      "title": "Argo CD",
    },
  ],
}
`;

exports[`Correctly returns getClusterProviderSummary 1`] = `
[
  {
    "key": "Amazon",
    "link": "/multicloud/infrastructure/clusters/managed?provider=aws",
    "value": 2,
  },
]
`;

exports[`Correctly returns getClusterStatus 1`] = `
[
  {
    "key": "Offline",
    "link": "/multicloud/search?filters={"textsearch":"kind%3ACluster%20ManagedClusterConditionAvailable%3A!True%20label%3Acloud%3DAmazon"}",
    "value": 1,
  },
  {
    "isPrimary": true,
    "key": "Ready",
    "link": "/multicloud/search?filters={"textsearch":"kind%3ACluster%20ManagedClusterConditionAvailable%3ATrue%20label%3Acloud%3DAmazon"}",
    "value": 1,
  },
]
`;

exports[`Correctly returns getClusterVersionSummary 1`] = `
[
  {
    "key": "OpenShift 4.15",
    "value": 1,
  },
  {
    "key": "unknown",
    "value": 1,
  },
]
`;

exports[`Correctly returns getComplianceData 1`] = `
[
  {
    "key": "Violations",
    "link": "/multicloud/governance/policies?violations=violations",
    "value": 1,
  },
  {
    "isPrimary": true,
    "key": "No violations",
    "link": "/multicloud/governance/policies?violations=no-violations&violations=no-status",
    "value": 1,
  },
]
`;

exports[`Correctly returns getFilteredClusters 1`] = `
[
  {
    "clusterSet": "default",
    "displayName": "managed-1",
    "hasAutomationTemplate": false,
    "hive": {
      "isHibernatable": false,
      "secrets": {},
    },
    "isCurator": false,
    "isHive": false,
    "isHostedCluster": false,
    "isHypershift": false,
    "isManaged": true,
    "isRegionalHubCluster": false,
    "isSNOCluster": false,
    "labels": {
      "cloud": "Amazon",
      "cluster.open-cluster-management.io/clusterset": "default",
      "env": "dev",
      "name": "managed-1",
      "openshiftVersion": "4.13.4",
      "openshiftVersion-major": "4",
      "openshiftVersion-major-minor": "4.13",
      "vendor": "OpenShift",
    },
    "name": "managed-1",
    "namespace": "managed-1",
    "nodes": {
      "nodeList": [],
      "ready": 0,
      "unhealthy": 0,
      "unknown": 0,
    },
    "owner": {},
    "provider": "aws",
    "status": "unknown",
    "statusMessage": "Registration agent stopped updating its lease.",
    "uid": "d75e89bc-29d7-45ca-b057-bb84dc095200",
  },
]
`;

exports[`Correctly returns getNodeSummary 1`] = `
{
  "mainSection": {
    "description": "total nodes",
    "title": "1",
  },
  "statusSection": [
    {
      "count": 1,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/infrastructure/clusters/managed?nodes=healthy",
      "title": "Ready",
    },
    {
      "count": 0,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": undefined,
      "title": "Unhealthy",
    },
    {
      "count": 0,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": undefined,
      "title": "Unknown",
    },
  ],
}
`;

exports[`Correctly returns getPolicyReport 1`] = `
{
  "clustersWithIssuesCount": 1,
  "policyReportCriticalCount": 1,
  "policyReportImportantCount": 1,
  "policyReportLowCount": 1,
  "policyReportModerateCount": 1,
}
`;

exports[`Correctly returns getPolicySummary 1`] = `
{
  "mainSection": {
    "description": "enabled policies",
    "link": "/multicloud/governance/policies?enabled=True",
    "title": "2",
  },
  "statusSection": [
    {
      "count": 0,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-violations",
      "title": "With no violations",
    },
    {
      "count": 1,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=violations",
      "title": "With violations",
    },
    {
      "count": 1,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-status",
      "title": "No status",
    },
  ],
}
`;

exports[`Correctly returns getPolicySummary with filtered clusters 1`] = `
{
  "mainSection": {
    "description": "enabled policies",
    "link": "/multicloud/governance/policies?enabled=True",
    "title": "1",
  },
  "statusSection": [
    {
      "count": 0,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-violations",
      "title": "With no violations",
    },
    {
      "count": 1,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=violations",
      "title": "With violations",
    },
    {
      "count": 0,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-status",
      "title": "No status",
    },
  ],
}
`;

exports[`Correctly returns getWorkerCoreTotal 1`] = `8`;

exports[`Correctly returns parseAlertsMetric 1`] = `
{
  "alertSeverity": {
    "critical": {
      "alerts": [],
      "icon": <CriticalRiskIcon />,
      "key": "critical",
      "label": "Critical",
    },
    "info": {
      "alerts": [
        "InsightsRecommendationActive",
        "InsightsRecommendationActive",
      ],
      "icon": undefined,
      "key": "info",
      "label": "Info",
    },
    "other": {
      "alerts": [],
      "icon": undefined,
      "key": "other",
      "label": "Other",
    },
    "warning": {
      "alerts": [
        "AlertmanagerReceiversNotConfigured",
      ],
      "icon": <ImportantRiskIcon />,
      "key": "warning",
      "label": "Warning",
    },
  },
  "clustersAffectedAlerts": [
    "local-cluster",
    "managed-1",
  ],
}
`;

exports[`Correctly returns parseOperatorMetric 1`] = `
{
  "clustersAffectedOperator": [],
  "degraded": [
    "etcd",
  ],
  "notAvailable": [
    "baremetal",
  ],
  "other": [
    "cloud-controller-manager",
    "cloud-credential",
    "cloud-credential",
  ],
}
`;

exports[`Correctly returns parseUpgradeRiskPredictions with no predictions 1`] = `
{
  "clustersWithRiskPredictors": 0,
  "criticalUpdateCount": 0,
  "infoUpdateCount": 0,
  "warningUpdateCount": 0,
}
`;

exports[`Correctly returns parseUpgradeRiskPredictions with predictions 1`] = `
{
  "clustersWithRiskPredictors": 2,
  "criticalUpdateCount": 1,
  "infoUpdateCount": 1,
  "warningUpdateCount": 1,
}
`;
